# DataLink

./: .gitmodules  CMakeLists.txt  README.md  build.sh
lib/udpipc/: CMakeLists.txt
lib/udpipc/include/: udp_ipc.hpp
lib/udpipc/src/: upd_ipc.cpp
src/: datalink_main.cpp  exclusive_router.cpp  exclusive_router.hpp  gateway_fast.cpp  gateway_fast.hpp
